--- a/net-misc/rdiff-backup/ChangeLog
+++ b/net-misc/rdiff-backup/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-misc/rdiff-backup
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-misc/rdiff-backup/ChangeLog,v 1.1 2002/04/29 09:00:55 bangert Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/rdiff-backup/ChangeLog,v 1.2 2002/06/20 09:42:22 bangert Exp $
+
+*rdiff-backup-0.8.0 (20 Jun 2002)
+
+  20 Jun 2002; Thilo Bangert <bangert@gentoo.org> rdiff-backup-0.8.0.ebuild:
+  version bump - added LICENSE
 
 *rdiff-backup-0.6.0 (27 Apr 2002)
 
