--- a/kde-base/arts/ChangeLog
+++ b/kde-base/arts/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for kde-base/arts
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/kde-base/arts/ChangeLog,v 1.4 2002/06/11 18:43:47 danarmak Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/arts/ChangeLog,v 1.5 2002/06/20 11:22:45 verwilst Exp $
 
 *arts-1.0.1.20020604 (4 Jun 2002)
 
@@ -9,6 +9,10 @@
   This is a snapshot of the KDE CVS's KDE_3_0_x branch from June 6th.
   This branch contains only bugfixes to the 3.0 release (the 3.0.1 release
   was also of this kind).
+	
+  Update <verwilst>: Filter out "-fomit-frame-pointer" and 
+  -fstrength-reduce" on gentoo 1.3+ systems. Arts seems very unstable 
+  otherwise (Even compiling something shuts it down )
 
 *arts-1.0.1 (24 May 2002)
 
