--- a/net-www/mod_ssl/ChangeLog
+++ b/net-www/mod_ssl/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-www/mod_ssl
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-www/mod_ssl/ChangeLog,v 1.1 2002/04/09 23:57:52 woodchip Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/mod_ssl/ChangeLog,v 1.2 2002/06/20 15:45:45 bangert Exp $
+
+*mod_ssl-2.8.9 (20 Jun 2002)
+
+  20 Jun 2002; Thilo Bangert <bangert@gentoo.org> mod_ssl-2.8.9.ebuild
+  
+  version bump - for apache 1.3.26
 
 *mod_ssl-2.8.8 (9 Apr 2002)
 
