--- a/dev-perl/mod_perl/ChangeLog
+++ b/dev-perl/mod_perl/ChangeLog
@@ -1,8 +1,15 @@
 # ChangeLog for dev-perl/mod_perl
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/mod_perl/ChangeLog,v 1.4 2002/05/07 19:15:25 woodchip Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/mod_perl/ChangeLog,v 1.5 2002/06/20 19:26:31 bangert Exp $
+
+*mod_perl-1.27 (20 Jun 2002)
+
+  20 Jun 2002; Thilo Bangert <bangert@gentoo.org> mod_perl-1.27.ebuild :
+  version bump
+
 
 *mod_perl-1.26 (7 May 2002)
+
 
 *mod_perl-1.25-r2 (9 Apr 2002)
 
