--- a/net-analyzer/ethereal/ChangeLog
+++ b/net-analyzer/ethereal/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-analyzer/ethereal
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/ethereal/ChangeLog,v 1.5 2002/05/04 03:16:38 woodchip Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/ethereal/ChangeLog,v 1.6 2002/06/21 00:34:56 sunflare Exp $
+
+#ethereal-0.9.4 (20 Jun 2002)
+
+  20 May 2002; Phil Bordelon <sunflare@gentoo.org> ethereal-0.9.4.ebuild :
+
+  Bumped the version.
 
 *ethereal-0.9.3-r1 (3 May 2002)
   
