--- a/dev-libs/fftw/ChangeLog
+++ b/dev-libs/fftw/ChangeLog
@@ -1,8 +1,15 @@
 # ChangeLog for dev-libs/fftw
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
 # Maintainer: George Shapovalov <george@gentoo.org>
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/fftw/ChangeLog,v 1.1 2002/05/22 17:47:23 george Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/fftw/ChangeLog,v 1.2 2002/06/21 01:51:01 george Exp $
 
-	27 Apr 2002; George Shapovalov <george@gentoo.org> fftw-2.1.3.ebuild :
+*fftw-2.1.3.ebuild (20 June 2002)
 
-	Initial release
+  20 June 2002; George Shapovalov <george@gentoo.org> fftw-2.1.3.ebuild :
+
+  updated ebuild to fix the top info file 
+  (added menu entry, thanks to Daniel Ahlberg)
+
+  27 Apr 2002; George Shapovalov <george@gentoo.org> fftw-2.1.3.ebuild :
+
+  Initial release
