--- a/sys-apps/cronbase/ChangeLog
+++ b/sys-apps/cronbase/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/cronbase
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/cronbase/ChangeLog,v 1.2 2002/04/27 21:46:45 bangert Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/cronbase/ChangeLog,v 1.3 2002/06/21 09:25:48 bangert Exp $
+
+  21 Jun 2002; Thilo Bangert <bangert@gentoo.org> files/run-crons :
+  
+  minor fixors/cleanups - suggested by jon nelson
 
   20 Apr 2002; Thilo Bangert <bangert@gentoo.org> files/run-crons :
   
