--- a/media-video/ogle-gui/ChangeLog
+++ b/media-video/ogle-gui/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for media-video/ogle-gui
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/media-video/ogle-gui/ChangeLog,v 1.4 2002/06/15 00:28:15 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/ogle-gui/ChangeLog,v 1.5 2002/06/21 12:12:03 stroke Exp $
+
+*ogle-gui-0.8.3-r1 (21 Jun 2002)
+
+  21 Jun 2002; Gabriele Giorgetti <stroke@gentoo.org> ogle-gui-0.8.3-r1.ebuild
+  
+  Previous versions were failing to build because of gtk+2 and libglade-2 being
+  unmasked. This is now fixed. 
 
 *ogle-gui-0.8.3 (14 Jun 2002)
 
