--- a/sys-apps/e2fsprogs/ChangeLog
+++ b/sys-apps/e2fsprogs/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/e2fsprogs
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/e2fsprogs/ChangeLog,v 1.2 2002/03/21 08:49:06 azarah Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/e2fsprogs/ChangeLog,v 1.3 2002/06/21 14:31:42 styx Exp $
+
+*e2fsprogs-1.27-r1 (21 Jun 2002)
+
+  21 Jun 2002; Joachim Blaabejrg <styx@gentoo.org> e2fsprogs-1.27-r1.ebuild:
+
+  Added ACL support.
 
 *e2fsprogs-1.27 (21 March 2002)
 
