--- a/net-www/mod_ssl/ChangeLog
+++ b/net-www/mod_ssl/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for net-www/mod_ssl
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-www/mod_ssl/ChangeLog,v 1.2 2002/06/20 15:45:45 bangert Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/mod_ssl/ChangeLog,v 1.3 2002/06/21 21:26:44 carpaski Exp $
+
+*mod_ssl-2.8.9-r1 (21 Jun 2002)
+
+  21 Jun 2002; Nicholas Jones <carpaski@gentoo.org> mod_ssl-2.8.9-r1.ebuild
+
+  o Changed depend line to allow for revisions of apache without
+    new ebuilds for mod_ssl.
 
 *mod_ssl-2.8.9 (20 Jun 2002)
 
