--- a/dev-perl/sdl-perl/ChangeLog
+++ b/dev-perl/sdl-perl/ChangeLog
@@ -1,7 +1,15 @@
 # ChangeLog for dev-perl/SDL-sdlpl
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/sdl-perl/ChangeLog,v 1.1 2002/06/21 14:18:39 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/sdl-perl/ChangeLog,v 1.2 2002/06/21 22:50:19 seemant Exp $
 
+
+*sdl-perl-1.18.5-r1 (21 Jun 2002)
+
+  21 Jun 2002; Seemant Kulleen <seemant@gentoo.org>
+  sdl-perl-1.18.5-r1.ebuild files/digest-sdl-perl-1.18.5-r1 :
+
+  Removed the sed'ing, because the opengl drivers from nvidia should be
+  found now.
 
 *sdl-perl-1.18.5 (21 Jun 2002)
 
