--- a/dev-ruby/ruby-dbi/ChangeLog
+++ b/dev-ruby/ruby-dbi/ChangeLog
@@ -1,8 +1,16 @@
 # ChangeLog for dev-ruby/ruby-dbi
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-dbi/ChangeLog,v 1.1 2002/04/24 19:27:56 karltk Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-dbi/ChangeLog,v 1.2 2002/06/21 23:25:07 rphillips Exp $
+
+*ruby-dbi-0.0.15 (21 Jun 2002)
+
+  21 Jun 2002; Ryan Phillips <rphillips@gentoo.org> ruby-dbi-0.0.15.ebuild :
+
+  New version
 
 *ruby-dbi-0.0.13 (24 Apr 2002)
+
+  24 Apr 2002; Karl Trygve Kalleberg <karltk@gentoo.org> ruby-dbi-0.0.13.ebuild files/digest-ruby-dbi-0.0.13 :
 
   24 Apr 2002; Karl Trygve Kalleberg <karltk@gentoo.org> ruby-dbi-0.0.13.ebuild files/digest-ruby-dbi-0.0.13 :
   
