--- a/sys-apps/yaboot/Changelog
+++ b/sys-apps/yaboot/Changelog
@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/yaboot
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Id: Changelog,v 1.1 2002/04/27 10:41:10 pvdabeel Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/yaboot/Changelog,v 1.2 2002/06/22 00:20:57 gerk Exp $
+
+*yaboot-1.3.6-r1 (June 21 2002); Gerk (gerk@gentoo.org)
+
+	Adjusted ARCH check and added RDEPEND, SLOT, LICENSE to build
+	(no -r1 as no need to recompile for this)
 
 *yaboot-1.3.6-r1 (Wed Apr 24 17:09:25 2002 CEST); pvdabeel <pvdabeel@gentoo.org>:
 
