--- a/sys-apps/hfsplusutils/Changelog
+++ b/sys-apps/hfsplusutils/Changelog
@@ -1,8 +1,12 @@
 # ChangeLog for sys-apps/hfsplusutils
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/hfsplusutils/Changelog,v 1.1 2002/06/20 06:17:51 gerk Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/hfsplusutils/Changelog,v 1.2 2002/06/22 00:40:29 gerk Exp $
 
 *hfsplusutils-1.0.4 (June 17, 2002)
+
+June 21 2002 Gerk (gerk@gentoo.org)
+	
+	Added ARCH check, no revision bump
 
 June 20, 2002; Gerk <gerk@gentoo.org>:
 
