--- a/sys-apps/pbbuttonsd/Changelog
+++ b/sys-apps/pbbuttonsd/Changelog
@@ -1,8 +1,12 @@
 # ChangeLog for sys-apps/pbbuttonsd
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/pbbuttonsd/Changelog,v 1.5 2002/06/08 17:16:29 gerk Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/pbbuttonsd/Changelog,v 1.6 2002/06/22 00:30:02 gerk Exp $
 
 *pbbuttons-0.4.10 (Sat Jun  8 11:38:34 EST 2002); gerk <gerk@gentoo.org>:
+
+June 21 2002 Gerk (gerk@gentoo.org):
+
+	added ARCH checks, no revision bump
 
 Sat Jun  8 11:38:34 EST 2002; gerk <gerk@gentoo.org>:
 	Upated for new release
