--- a/sys-apps/powerprefs/Changelog
+++ b/sys-apps/powerprefs/Changelog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/powerprefs
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/powerprefs/Changelog,v 1.1 2002/06/08 17:13:25 gerk Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/powerprefs/Changelog,v 1.2 2002/06/22 00:35:16 gerk Exp $
+
+* powerprefs-0.2.1 - June 21 2002 Gerk (gerk@gentoo.org)
+	added ARCH check, no revision bump
 
 * powerprefs-0.2.1 (first Changelog entry) - Sat Jun  8 11:58:08 EST 2002
 	Updated build for new vendor release - Gerk
