--- a/gnome-base/bonobo-activation/ChangeLog
+++ b/gnome-base/bonobo-activation/ChangeLog
@@ -1,18 +1,18 @@
 # ChangeLog for gnome-base/bonobo-activation
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/bonobo-activation/ChangeLog,v 1.6 2002/06/19 17:00:44 stroke Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/bonobo-activation/ChangeLog,v 1.7 2002/06/22 03:59:25 spider Exp $
+
+*bonobo-activation-1.0.2 (21 Jun 2002)
+  21 Jun 2002; Spider <spider@gentoo.org> bonobo-activation-1.0.2.ebuild :
+  updated version, some minor dep changes
 
 *bonobo-activation-1.0.1 (19 Jun 2002)
-
   19 Jun 2002; Gabriele Giorgetti <stroke@gentoo.org> bonobo-activation-1.0.1.ebuild:
-
   New version.
 
 
 bonobo-activation-1.0.0-r1 (04 Jun 2002)
-
   04 Jun 2002; Bruce A. Locke <blocke@shivan.org> bonobo-activation-1.0.0-r1.ebuild:
-
   Converted to gnome2.eclass
 
 bonobo-activation-1.0.0 (1 Jun 2002)
