--- a/app-editors/vi/ChangeLog
+++ b/app-editors/vi/ChangeLog
@@ -1,12 +1,17 @@
 # ChangeLog for <CATEGORY>/<PACKAGE_NAME>
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/vi/ChangeLog,v 1.2 2002/05/12 19:52:52 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/vi/ChangeLog,v 1.3 2002/06/22 09:51:07 naz Exp $
+
+vi-3.7-r1 (12 May 2002)
+  12 May 2002; Michael Nazaroff <naz@gentoo.org> :
+    Added a addpredict line to hopefully fix 3038.  Which is a sandbox violation
+    that seems to occur when logged in via ssh and trying to merge vi.  The
+    pacakge tries to access /dev/pty/s6.
+    
 
 vi-3.7 (12 May 2002)
   12 May 2002; Spider <spider@gentoo.org> :
   Now that I've added the Caldera LICENSE I'm changing this one too  
-
-
 
 *vi-3.7  (12 May 2002)
   12 May 2002; Spider <spider@gentoo.org> ChangeLog vi-3.7.ebuild :
