--- a/x11-misc/conectiva-crystal/ChangeLog
+++ b/x11-misc/conectiva-crystal/ChangeLog
@@ -1,6 +1,8 @@
 # ChangeLog for x11-misc/conectiva-crystal
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/conectiva-crystal/ChangeLog,v 1.2 2002/06/17 22:46:25 verwilst Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/conectiva-crystal/ChangeLog,v 1.3 2002/06/22 10:38:13 verwilst Exp $
+
+*conectiva-crystal-3.1_beta37 (22 June 2002) <verwilst@gentoo.org>
 
 *conectiva-crystal-3.1_beta35 (17 June 2002) <verwilst@gentoo.org>
 
