--- a/app-crypt/krb5/ChangeLog
+++ b/app-crypt/krb5/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for app-crypt/krb5
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-crypt/krb5/ChangeLog,v 1.3 2002/02/22 02:31:13 g2boojum Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-crypt/krb5/ChangeLog,v 1.4 2002/06/23 01:23:35 sandymac Exp $
+
+*krb5-1.2.5-r1 (22 Jun 2002)
+
+  22 Jun 2002; William McArthur <sandymac@gentoo.org> :
+
+  Changed --localstatedir from /var/krb5kdc to /var because the /krb5kdc is
+  automatically appended.
 
 *krb5-1.2.3 (21 Feb 2002)
 
