--- a/net-www/tomcat/ChangeLog
+++ b/net-www/tomcat/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for net-www/tomcat
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-www/tomcat/ChangeLog,v 1.2 2002/06/03 22:55:52 karltk Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/tomcat/ChangeLog,v 1.3 2002/06/23 08:00:28 sandymac Exp $
+
+*tomcat-4.0.4 (23 Jun 2002)
+
+  23 Jun 2002; William McArthur <sandymac@gentoo.org> tomcat-4.0.4.ebuild files/digest-tomcat-4.0.4 :
+ 
+  New upstream version. Added a .keep file to the logs dir to prevent the logs
+  from being removed during an upgrade if there were no log files.
 
 *tomcat-4.0.3 (03 Jun 2002)
 
