--- a/net-news/slrn/ChangeLog
+++ b/net-news/slrn/ChangeLog
@@ -1,6 +1,13 @@
-# ChangeLog for net-news/slrn
+# ChangeLog for usr/slrn
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-news/slrn/ChangeLog,v 1.1 2002/02/01 21:53:36 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-news/slrn/ChangeLog,v 1.2 2002/06/23 16:46:43 lamer Exp $
+
+*slrn-slrn-0.7.7.4 (23 Jun 2002)
+
+  23 Jun 2002; Ben Lutgens <lamer@gentoo.org> ChangeLog  :
+
+  Latest version from upstream. Included two new patches and removed the
+  deprecated ones (ssl support is included now)
 
 *slrn-0.9.7.3 (1 Feb 2002)
 
