--- a/media-libs/gdk-pixbuf/ChangeLog
+++ b/media-libs/gdk-pixbuf/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for media-libs/gdk-pixbuf
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/media-libs/gdk-pixbuf/ChangeLog,v 1.11 2002/06/19 09:12:56 stroke Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/gdk-pixbuf/ChangeLog,v 1.12 2002/06/24 02:13:19 azarah Exp $
+
+*gdk-pixbuf-0.18.0-r1 (24 Jun 2002)
+
+  24 Jun 2002; Martin Schlemmer <azarah@gentoo.org> :
+
+  Convert to use libtool.eclass.
 
 *gdk-pixbuf-0.18.0 (19 Jun 2002)
 
