--- a/sys-apps/openmosix-user/ChangeLog
+++ b/sys-apps/openmosix-user/ChangeLog
@@ -1,9 +1,9 @@
 # ChangeLog for sys-apps/openmosix-user
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/openmosix-user/ChangeLog,v 1.1 2002/06/23 23:42:10 lostlogic Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/openmosix-user/ChangeLog,v 1.2 2002/06/24 02:58:27 lostlogic Exp $
 
 * openmosix-user-0.2.0 (23 Jun 2002)
 
-  01 Feb 2002; G.Bevin <gbevin@gentoo.org> openmosix-0.2.0.ebuild:
+  23 Jun 2002; Brandon Low <lostlogic@gentoo.org> openmosix-0.2.0.ebuild:
   
   Version bump to 0.2.0 for new openmosix-sources
