--- a/x11-libs/xosd/Changelog
+++ b/x11-libs/xosd/Changelog
@@ -1,15 +1,13 @@
 # ChangeLog for x11-libs/xosd
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# Author: Stacey Keast <slik@telusplanet.net>
-# Maintainer: José Alberto Suárez López <bass@gentoo.org>
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/xosd/Changelog,v 1.2 2002/06/09 00:37:28 bass Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/xosd/Changelog,v 1.3 2002/06/24 08:07:26 seemant Exp $
+
+  08 Jun 2002; J.Alberto Suárez L. <bass@gentoo.org> xosd-0.70.ebuild:
+
+split xmms plugin to xmms-xosd.
 
 *xosd-0.70 (04 Jun 2002)
 
   04 Jun 2002; J.Alberto Suárez L. <bass@gentoo.org> xosd-0.70.ebuild:
 
-First relase.
-
-  08 Jun 2002; J.Alberto Suárez L. <bass@gentoo.org> xosd-0.70.ebuild:
-
-split xmms plugin to xmms-xosd.
+First relase submitted by Stacey Keast <slik@telusplanet.net>
