--- a/dev-perl/SDL-sdlpl/ChangeLog
+++ b/dev-perl/SDL-sdlpl/ChangeLog
@@ -1,6 +1,15 @@
 # ChangeLog for dev-perl/SDL-sdlpl
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/SDL-sdlpl/ChangeLog,v 1.9 2002/06/21 13:51:40 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/SDL-sdlpl/ChangeLog,v 1.10 2002/06/24 12:11:21 seemant Exp $
+
+*SDL-sdlpl-1.18.5-r1 (24 Jun 2002)
+
+  21 Jun 2002; Seemant Kulleen <seemant@gentoo.org>
+  SDL-sdlpl-1.18.5-r1.ebuild files/digest-SDL-sdlpl-1.18.5-r1 :
+
+  Relocated the actual ebuild to dev-perl/sdl-perl instead, which makes more
+  sense.  So this new ebuild is just a wrapper to emerge that instead.
+  Users should unmerge SDL-sdlpl now.
 
 *SDL-sdlpl-1.18.5 (21 Jun 2002)
 
