--- a/net-www/mod_ssl/ChangeLog
+++ b/net-www/mod_ssl/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-www/mod_ssl
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-www/mod_ssl/ChangeLog,v 1.3 2002/06/21 21:26:44 carpaski Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/mod_ssl/ChangeLog,v 1.4 2002/06/24 16:11:53 carpaski Exp $
+
+*mod_ssl-2.8.10 (24 Jun 2002)
+
+  24 Jun 2002; Nicholas Jones <carpaski@gentoo.org> mod_ssl-2.8.10.ebuild
+
+  o Version bump. Overflow fix.
 
 *mod_ssl-2.8.9-r1 (21 Jun 2002)
 
