--- a/net-mail/maildrop/ChangeLog
+++ b/net-mail/maildrop/ChangeLog
@@ -1,11 +1,19 @@
 # ChangeLog for net-mail/maildrop
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-mail/maildrop/ChangeLog,v 1.4 2002/06/23 23:59:31 lamer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/maildrop/ChangeLog,v 1.5 2002/06/24 20:33:45 woodchip Exp $
+
+*maildrop-1.4.0 (24 Jun 2002)
+
+  24 Jun 2002; Donny Davies <woodchip@gentoo.org> :
+
+  Chase latest release; make it use the sourceforge mirror://.
 
 *maildrop-1.3.9-r1 (23 Jun 2002)
-	23 Jun 2002; Ben Lutgens <lamer@gentoo.org>
-	I'm explicitly stripping out -funroll-loops cause it's causing maildrop
-	to not compile.
+
+  23 Jun 2002; Ben Lutgens <lamer@gentoo.org> :
+
+  I'm explicitly stripping out -funroll-loops cause it's causing maildrop
+  to not compile.
 
 *maildrop-1.3.8-r1 (2 May 2002)
 
