--- a/x11-misc/ksplash-ml/ChangeLog
+++ b/x11-misc/ksplash-ml/ChangeLog
@@ -1,6 +1,12 @@
-# ChangeLog for x11-misc/mosfet-liquid-widgets
+# ChangeLog for x11-misc/ksplash-ml
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/ksplash-ml/ChangeLog,v 1.2 2002/06/17 22:06:23 verwilst Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/ksplash-ml/ChangeLog,v 1.3 2002/06/24 20:53:33 danarmak Exp $
+
+*ksplash-ml-0.95.2 (24 Jun 2002)
+
+  24 Jun 2002; Dan Armak <danarmak@gentoo.org> ChangeLog  :
+
+  New upstream version.
 
 *ksplash-ml-0.95.1 (17 June 2002) <verwilst@gentoo.org>
 
