--- a/app-admin/gentoolkit/ChangeLog
+++ b/app-admin/gentoolkit/ChangeLog
@@ -1,6 +1,16 @@
 # ChangeLog for app-admin/gentoolkit
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-admin/gentoolkit/ChangeLog,v 1.22 2002/06/08 13:38:45 lostlogic Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/gentoolkit/ChangeLog,v 1.23 2002/06/24 23:02:32 karltk Exp $
+
+*gentoolkit-0.1.12 (25 Jun 2002)
+
+  25 Jun 2002; Karl Trygve Kalleberg <karltk@gentoo.org> gentoolkit-0.1.12.ebuild files/digest-gentoolkit-0.1.12:
+
+  Added gentoo-bump-version.
+  Added useflag.
+  Fixed bugs in emerge-webrsync.
+
+  Removed gentoolkit-0.1.11-r1.ebuild files/digest-gentoolkit-0.1.11-r1
 
 *gentoolkit-0.1.11-r1 (08 Jun 2002)
 
