--- a/net-print/gimp-print-cups/ChangeLog
+++ b/net-print/gimp-print-cups/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-print/gimp-print-cups
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-print/gimp-print-cups/ChangeLog,v 1.3 2002/05/04 22:45:53 woodchip Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-print/gimp-print-cups/ChangeLog,v 1.4 2002/06/25 00:12:00 woodchip Exp $
+
+*gimp-print-cups-4.3.0 (24 Jun 2002)
+
+  24 Jun 2002; Donny Davies <woodchip@gentoo.org> :
+
+  Chase latest release + some cleanups.
 
 *gimp-print-cups-4.2.0-r1 (4 May 2002)
 
