--- a/dev-java/kaffe/ChangeLog
+++ b/dev-java/kaffe/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-lang/kaffe
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-java/kaffe/ChangeLog,v 1.4 2002/05/05 02:06:46 karltk Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/kaffe/ChangeLog,v 1.5 2002/06/25 01:34:33 karltk Exp $
+
+*kaffe-1.0.7_rc1 (25 Jun 2002)
+
+  25 May 2002; Karl Trygve Kalleberg <karltk@gentoo.org> kaffe-1.0.7_rc1.ebuild files/digest-kaffe-1.0.7_rc1:
+
+  New upstream version.
 
 *kaffe-1.0.6-r3 (05 May 2002)
 
