--- a/net-misc/qtella/ChangeLog
+++ b/net-misc/qtella/ChangeLog
@@ -1,6 +1,8 @@
 # ChangeLog for net-misc/qtella
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-misc/qtella/ChangeLog,v 1.4 2002/05/01 11:34:22 verwilst Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/qtella/ChangeLog,v 1.5 2002/06/25 10:24:38 verwilst Exp $
+
+*qtella-0.5.3 (25 June 2002) Bart Verwilst <verwilst@gentoo.org>
 
 *qtella-0.5.2 (1 May 2002)
 
