--- a/net-p2p/fags/ChangeLog
+++ b/net-p2p/fags/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-p2p/fags
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/fags/ChangeLog,v 1.1 2002/06/25 10:26:11 bangert Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/fags/ChangeLog,v 1.2 2002/06/25 11:12:27 bangert Exp $
+
+  26 Jun 2002; Thilo Bangert <bangert@gentoo.org> :
+
+  moved to net-p2p; added SLOT="0"
+
 
 *fags-0.2.1 (8 Jun 2002)
 
