--- a/net-p2p/fidelio/ChangeLog
+++ b/net-p2p/fidelio/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-p2p/fidelio
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/fidelio/ChangeLog,v 1.1 2002/06/25 10:26:11 bangert Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/fidelio/ChangeLog,v 1.2 2002/06/25 11:12:27 bangert Exp $
+
+  26 Jun 2002; Thilo Bangert <bangert@gentoo.org> :
+
+  moved to net-p2p; added SLOT="0"
 
 *fidelio-0.9.6 (1 Feb 2002)
 
