--- a/net-p2p/agqt/ChangeLog
+++ b/net-p2p/agqt/ChangeLog
@@ -1,10 +1,11 @@
 # ChangeLog for net-p2p/agqt
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/agqt/ChangeLog,v 1.2 2002/06/25 11:12:27 bangert Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/agqt/ChangeLog,v 1.3 2002/06/25 11:18:21 bangert Exp $
 
   25 Jun 2002; Thilo Bangert <bangert@gentoo.org> :
   
-  added SLOT="0"
+  added SLOT="0" - fixed depandency to match net-p2p/openag and 
+  not net-misc/openag
   
 
 *agqt-0.10 (26 Apr 2002)
