--- a/net-p2p/dc-gui/ChangeLog
+++ b/net-p2p/dc-gui/ChangeLog
@@ -1,10 +1,11 @@
 # ChangeLog for net-p2p/dc-gui
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/dc-gui/ChangeLog,v 1.2 2002/06/25 11:12:27 bangert Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/dc-gui/ChangeLog,v 1.3 2002/06/25 11:20:29 bangert Exp $
 
   25 Jun 2002; Thilo Bangert <bangert@gentoo.org>:
   
-  moved to net-p2p; added SLOT="0"
+  moved to net-p2p; added SLOT="0" - fixed depandency: net-misc/dctc ->
+  net-p2p/dctc
 
 *dc-gui-0.57 (4 Jun 2002)
 
