--- a/net-p2p/kift/ChangeLog
+++ b/net-p2p/kift/ChangeLog
@@ -1,10 +1,10 @@
 # ChangeLog for net-p2p/kift
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/kift/ChangeLog,v 1.2 2002/06/25 11:12:27 bangert Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/kift/ChangeLog,v 1.3 2002/06/25 11:25:41 bangert Exp $
 
   26 Jun 2002; Thilo Bangert <bangert@gentoo.org> :
 
-  moved to net-p2p
+  moved to net-p2p - fix depandency: net-misc/gift -> net-p2p/gift
 
 *kift-0.8.1 (30 May 2002)
 
