--- a/app-i18n/canna/ChangeLog
+++ b/app-i18n/canna/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for <CATEGORY>/<PACKAGE_NAME>
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-i18n/canna/Changelog,v 1.2 2002/06/02 23:03:24 wmertens Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-i18n/canna/ChangeLog,v 1.1 2002/06/25 16:01:22 stubear Exp $
 
 *canna-3.5_beta2-r1 (02 Jun 2002)
 
