--- a/net-im/silc-client/ChangeLog
+++ b/net-im/silc-client/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for <CATEGORY>/<PACKAGE_NAME>
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-im/silc-client/ChangeLog,v 1.2 2002/05/19 23:48:05 rphillips Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/silc-client/ChangeLog,v 1.3 2002/06/25 20:18:29 sunflare Exp $
+
+*silc-client-0.9.4 (25 Jun 2002)
+
+  25 Jun 2002; Phil Bordelon <sunflare@gentoo.org> silc-client-0.9.4.ebuild :
+
+  Version bump.  Cleaned up the build to match current standards as well.
 
 *silc-client-0.9.1 (19 May 2002)
 
