--- a/x11-libs/libzvt/ChangeLog
+++ b/x11-libs/libzvt/ChangeLog
@@ -1,7 +1,12 @@
 # ChangeLog for x11-libs/libzvt
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libzvt/ChangeLog,v 1.6 2002/06/24 01:22:10 azarah Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libzvt/ChangeLog,v 1.7 2002/06/26 06:40:45 spider Exp $
 
+
+*libzvt-2.0.1 (27 Jun 2002)
+  27 Jun 2002; Spider <spider@gentoo.org> libzvt-2.0.1.ebuild :
+  update to use mirror:// and a new version
+  
 *libzvt-2.0.0-r1.ebuild (23 Jun 2002)
 
   23 Jun 2002; Martin Schlemmer <azarah@gentoo.org> :
