--- a/x11-libs/crux/ChangeLog
+++ b/x11-libs/crux/ChangeLog
@@ -1,7 +1,13 @@
 # ChangeLog for x11-lbs/crux
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/crux/ChangeLog,v 1.1 2002/05/27 01:20:27 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/crux/ChangeLog,v 1.2 2002/06/26 08:24:30 spider Exp $
 
+
+*crux-1.9.3 (27 Jun 2002)
+  27 Jun 2002; Spider <spider@gentoo.org> crux-1.9.3.ebuild :
+  slim it down, make it pass lintool check and use mirror:/ 
+
+  
 *crux-1.9.2 (27 May 2002)
   27 May 2002; Spider <spider@gentoo.org> ChangeLog crux-1.9.2.ebuild : 
   initial release, a theme engine for gtk2 
