--- a/net-p2p/qtella/ChangeLog
+++ b/net-p2p/qtella/ChangeLog
@@ -1,6 +1,8 @@
 # ChangeLog for net-p2p/qtella
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/qtella/ChangeLog,v 1.2 2002/06/25 11:12:27 bangert Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/qtella/ChangeLog,v 1.3 2002/06/26 10:09:34 bangert Exp $
+
+*qtella-0.5.3 (25 June 2002) Bart Verwilst <verwilst@gentoo.org>
 
   26 Jun 2002; Thilo Bangert <bangert@gentoo.org> :
 
