--- a/net-libs/linc/ChangeLog
+++ b/net-libs/linc/ChangeLog
@@ -1,7 +1,11 @@
 # ChangeLog for net-libs/linc
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/linc/ChangeLog,v 1.3 2002/05/28 01:43:58 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/linc/ChangeLog,v 1.4 2002/06/26 23:08:15 spider Exp $
 
+
+linc-0.5.0-r1 (27 Jun 2002)
+  27 Jun 2002; Spider <spider@gentoo.org> linc-0.5.0-r1.ebuild :
+  mirror:// and debug.eclass
 
 *linc-0.5.0 (27 May 2002)
   27 May 2002; Spider <spider@gentoo.org> linc-0.5.0.ebuild :
