--- a/gnome-base/ORBit2/ChangeLog
+++ b/gnome-base/ORBit2/ChangeLog
@@ -1,6 +1,10 @@
-# ChangeLog for gnome-base/ORBit2
-# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/ORBit2/ChangeLog,v 1.3 2002/05/28 00:44:05 spider Exp $
+
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/ORBit2/ChangeLog,v 1.4 2002/06/26 23:33:04 spider Exp $
+
+ORBit2-2.4.0 (27 Jun 2002)
+  27 Jun 2002; Spider <spider@gentoo.org> ORBit2-2.4.0-r1.ebuild :
+  new revision with mirror and debug.eclass
+
 
 *ORBit2-2.4.0 (27 May 2002)
   27 May 2002; Spider <spider@gentoo.org> ORBit2-2.4.0.ebuild :
