--- a/net-misc/freeswan/ChangeLog
+++ b/net-misc/freeswan/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-misc/freeswan
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/freeswan/ChangeLog,v 1.1 2002/05/23 19:37:31 ashmodai Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/freeswan/ChangeLog,v 1.2 2002/06/27 10:25:22 seemant Exp $
+
+  27 Jun 2002; Seemant Kulleen <seemant@gentoo.org> freeswan-1.97.ebuild :
+
+  added dev-libs/gmp to DEPEND list per bug #3993 by
+  sam.hostetter@ise-indy.com (Sam Hostetter)
 
 *freeswan-1.97 (23 May 2002)
 
