--- a/net-im/ymessenger/ChangeLog
+++ b/net-im/ymessenger/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for net-im/ymessenger
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-im/ymessenger/ChangeLog,v 1.1 2002/04/27 22:51:55 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/ymessenger/ChangeLog,v 1.2 2002/06/27 12:01:45 seemant Exp $
+
+*ymessenger-0.99.19 (27 Jun 2002)
+
+  27 Jun 2002; Seemant Kulleen <seemant@gentoo.org>
+  ymessenger-0.99.19.ebuild files/digest-ymessenger-0.99.19 :
+
+  Version bump thanks to: priyadi@priyadi.net (Priyadi Iman Nurcahyo) in bug
+  #3920
 
 *ymessenger-0.93 (27 Apr 2002)
 
