--- a/net-misc/bind-tools/ChangeLog
+++ b/net-misc/bind-tools/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for net-misc/bind-tools
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-misc/bind-tools/ChangeLog,v 1.1 2002/02/01 21:53:34 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/bind-tools/ChangeLog,v 1.2 2002/06/27 13:46:17 seemant Exp $
+
+*bind-tools-9.2.1 (27 Jun 2002)
+
+  27 Jun 2002; Seemant Kulleen <seemant@gentoo.org> bind-tools-9.2.1.ebuild
+  files/digest-bind-tools-9.2.1 :
+
+  Version bump by: markus-krainer@chello.at (Markus Krainer) in bug #3249
 
 *bind-tools-9.1.3-r1 (1 Feb 2002)
 
