--- a/net-mail/sendmail/ChangeLog
+++ b/net-mail/sendmail/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for <CATEGORY>/<PACKAGE_NAME>
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-mail/sendmail/ChangeLog,v 1.4 2002/06/24 21:03:57 bangert Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/sendmail/ChangeLog,v 1.5 2002/06/27 16:29:56 g2boojum Exp $
+
+  27 Jun 2002; Grant Goodyear <g2boojum@gentoo.org> sendmail-8.12.4-r2.ebuild:
+  
+  Make sure that queue directories don't get cleaned away.
 
   24 Jun 2002; Thilo Bangert <bangert@gentoo.org> sendmail-8.12.4-r1.ebuild:
   
