--- a/net-misc/gtm/ChangeLog
+++ b/net-misc/gtm/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-misc/gtm
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-misc/gtm/ChangeLog,v 1.2 2002/05/28 23:40:58 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/gtm/ChangeLog,v 1.3 2002/06/28 03:10:38 spider Exp $
+
+*gtm-0.4.11-r2 (28 Jun 2002)
+  28 Jun 2001; Spider <spider@gentoo.org> gtm-0.4.11-r2.ebuild:
+  make it use gnome-panel instead of gnome-core
 
 *gtm-0.4.11-r1 (28 May 2002)
   28 May 2001; Spider <spider@gentoo.org> gtm-0.4.11-r1.ebuild:
