--- a/x11-misc/metacity-setup/ChangeLog
+++ b/x11-misc/metacity-setup/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-misc/metacity-setup
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/metacity-setup/ChangeLog,v 1.3 2002/06/22 16:30:13 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/metacity-setup/ChangeLog,v 1.4 2002/06/28 07:46:31 spider Exp $
+
+metacity-setup-0.6 (28 Jun 2002)
+  28 Jun 2002; Spider <spider@gentoo.org> metacity-setup-0.6.ebuild :
+  versionbump
 
 *metacity-setup-0.5.2 (22 Jun 2002)
   22 Jun 2002; Spider <spider@gentoo.org> metacity-setup-0.5.2.ebuild :
