--- a/gnome-base/ORBit2/ChangeLog
+++ b/gnome-base/ORBit2/ChangeLog
@@ -1,6 +1,11 @@
 
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/ORBit2/ChangeLog,v 1.4 2002/06/26 23:33:04 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/ORBit2/ChangeLog,v 1.5 2002/06/28 08:25:59 spider Exp $
 
+
+ORBit2-2.4.0 (28 Jun 2002)
+  28 Jun 2002; Spider <spider@gentoo.org> ORBit2-2.4.0-r2.ebuild :
+  linc islibtoolized, now this is too.
+  
 ORBit2-2.4.0 (27 Jun 2002)
   27 Jun 2002; Spider <spider@gentoo.org> ORBit2-2.4.0-r1.ebuild :
   new revision with mirror and debug.eclass
