--- a/net-mail/ezmlm/ChangeLog
+++ b/net-mail/ezmlm/ChangeLog
@@ -1,8 +1,12 @@
 # ChangeLog for net-mail/ezmlm
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-mail/ezmlm/ChangeLog,v 1.3 2002/05/14 18:00:49 bangert Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/ezmlm/ChangeLog,v 1.4 2002/06/28 11:10:20 bangert Exp $
 
-  14 May 2002; Thilo Bangert <bangert@gentoo.org> ChangeLog:
+  14 May 2002; Thilo Bangert <bangert@gentoo.org> :
+
+  fixor (bug #4281) - wrong location - thanks Lagos
+
+  14 May 2002; Thilo Bangert <bangert@gentoo.org> :
 
   fixor (bug #2729) - added LICENSE 
 
