--- a/app-cdr/arson/ChangeLog
+++ b/app-cdr/arson/ChangeLog
@@ -1,6 +1,8 @@
 # ChangeLog for app-cdr/arson
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-cdr/arson/ChangeLog,v 1.4 2002/06/01 19:56:38 danarmak Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-cdr/arson/ChangeLog,v 1.5 2002/06/28 12:16:52 verwilst Exp $
+
+*arson-0.9.6 (28 Jun 2002) Bart Verwilst <verwilst@gentoo.org>
 
 *arson-0.9.5-r1 (1 Jun 2002)
 
