--- a/kde-base/kde/ChangeLog
+++ b/kde-base/kde/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/kde
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kde/ChangeLog,v 1.5 2002/06/17 20:36:39 danarmak Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kde/ChangeLog,v 1.6 2002/07/03 07:57:21 danarmak Exp $
+
+*kde-3.0.2 (03 Jul 2002)
+
+  03 Jul 2002; Dan Armak <danarmak@gentoo.org> ChangeLog  :
+
+  New stability release.
 
 *kde-3.0.1.20020604 (4 Jun 2002)
 
