--- a/kde-base/kdeaddons/ChangeLog
+++ b/kde-base/kdeaddons/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/kdeaddons
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeaddons/ChangeLog,v 1.8 2002/06/25 23:52:13 gerk Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeaddons/ChangeLog,v 1.9 2002/07/03 07:57:21 danarmak Exp $
+
+*kdeaddons-3.0.2 (03 Jul 2002)
+
+  03 Jul 2002; Dan Armak <danarmak@gentoo.org> ChangeLog  : :
+
+  New stability release.
   
   25 June 2002; Mark Guertin <gerk@gentoo.org> changelog:
 
