--- a/kde-base/kdeartwork/ChangeLog
+++ b/kde-base/kdeartwork/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/kdeartwork
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeartwork/ChangeLog,v 1.7 2002/06/11 18:43:47 danarmak Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeartwork/ChangeLog,v 1.8 2002/07/03 07:57:21 danarmak Exp $
+
+*kdeartwork-3.0.2 (03 Jul 2002)
+
+  03 Jul 2002; Dan Armak <danarmak@gentoo.org> ChangeLog  : : : :
+
+  New stability release.
 
 *kdeartwork-3.0.1.20020604 (4 Jun 2002)
 
